exe dosyası denemesi için exe dosyası ekledim ve bazı iyileştirmeler yaptım

--- a/main.css
+++ b/main.css
@@ -9,13 +9,14 @@ h2,h1{
 
 .konular{
     height: fit-content;
-    width: 50%;
+    width: 100%;
     position: relative;
     background-color: aliceblue;
     border: #000000 solid ;
     margin: auto;
     font-size: 30px;
     text-align: center;
+    display: inline-block;
 
 }
 a{
